--- a/vxraildemo3/build.properties
+++ b/vxraildemo3/build.properties
@@ -9,5 +9,6 @@ bin.includes = plugin.xml,\
                build.properties,\
                plugin.properties,\
                dellemc1.gif,\
-               plugin_customization.ini
+               plugin_customization.ini,\
+               intro/
 
