--- a/vxraildemo3/build.properties
+++ b/vxraildemo3/build.properties
@@ -10,5 +10,7 @@ bin.includes = plugin.xml,\
                plugin.properties,\
                dellemc1.gif,\
                plugin_customization.ini,\
-               intro/
+               intro/,\
+               lib/Ab.jar
+source.. = src/
 
