Added resources files and folders.

--- a/vxraildemo3/build.properties
+++ b/vxraildemo3/build.properties
@@ -11,6 +11,7 @@ bin.includes = plugin.xml,\
                dellemc1.gif,\
                plugin_customization.ini,\
                intro/,\
-               lib/Ab.jar
+               lib/Ab.jar,\
+               resources/
 source.. = src/
 
