--- a/pom.xml
+++ b/pom.xml
@@ -22,6 +22,11 @@
 			<layout>p2</layout>
 			<url>http://download.eclipse.org/releases/oxygen/</url>
 		</repository>
+		<repository>
+			<id>nebula</id>
+			<layout>p2</layout>
+			<url>http://download.eclipse.org/nebula/releases/latest</url>
+		</repository>
 	</repositories>
 
 	<build>
@@ -76,24 +81,12 @@
 					<target>1.8</target>
 				</configuration>
 			</plugin>
-			<!-- 
-			<plugin>
-				<groupId>org.eclipse.tycho</groupId>
-				<artifactId>tycho-packaging-plugin</artifactId>
-				<version>${tycho.version}</version>
-				<configuration>
-					<archive>
-						<manifestEntries>
-							<Built-By>jkiss.org</Built-By>
-							<Created-By>jkiss.org</Created-By>
-							<Build-Time>${maven.build.timestamp}</Build-Time>
-						</manifestEntries>
-						<addMavenDescriptor>false</addMavenDescriptor>
-					</archive>
-				</configuration>
-			</plugin>
-			 -->
-			
+			<!-- <plugin> <groupId>org.eclipse.tycho</groupId> <artifactId>tycho-packaging-plugin</artifactId> 
+				<version>${tycho.version}</version> <configuration> <archive> <manifestEntries> 
+				<Built-By>jkiss.org</Built-By> <Created-By>jkiss.org</Created-By> <Build-Time>${maven.build.timestamp}</Build-Time> 
+				</manifestEntries> <addMavenDescriptor>false</addMavenDescriptor> </archive> 
+				</configuration> </plugin> -->
+
 		</plugins>
 	</build>
 
